Fix double border between titlebar and window content
Something has changed in a recent version of Electron, that means
the border-top is no longer required. Yay!

--- a/src/client/sass/client.scss
+++ b/src/client/sass/client.scss
@@ -30,10 +30,6 @@ a {
   }
 }
 
-body {
-  border-top: 1px solid #cfcfcf;
-}
-
 @import 'app-layout';
 @import 'sidebar';
 @import 'channel';
